--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,13 @@
-
 {
-  "name": "ObranyJK – Cesta za svazovým figurantem",
-  "short_name": "ObranyJK",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#b71c1c",
-  "icons": [
-    {
-      "src": "icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
+        "name": "EAT, SLEEP, BITE, REPEAT",
+        "short_name": "BITE APP",
+        "start_url": ".",
+        "display": "standalone",
+        "background_color": "#000000",
+        "description": "Cesta ke Svazovému figurantovi",
+        "icons": [{
+            "src": "icon.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        }]
     }
-  ]
-}
